dynamic legend, tooltip for interaction, fixed collapsed view styling

--- a/ui/src/components/pages/Pipeline/partials/Graph/style.css
+++ b/ui/src/components/pages/Pipeline/partials/Graph/style.css
@@ -29,7 +29,6 @@
     height: 12rem;
     width: 12rem;
     justify-content: space-between;
-    margin-top: 2rem;
 }
 
 .legend-title {
